dhall/tests/type-inference/failure/mixedUnions.txt
Type error: error: InvalidVariantType
 --> <current file>:1:28
  |
1 | < Left : Natural | Right : Type >
  |                            ^^^^ InvalidVariantType
  |
